# opengl-basics

./: .gitattributes  .gitignore  CMakeLists.txt  Makefile  README.md
assets/shaders/: basic.frag  basic.vert
include/glad/: glad.h
include/renderer/: Mesh.hpp  Renderer.hpp  Shader.hpp  Shape.hpp  Texture.hpp
src/: Mesh.cpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shape.cpp  main.cpp
src/lib/: glad.c
src/renderer/: Mesh.cpp  Renderer.cpp  Shader.cpp  Texture.cpp
src/shaders/: basic.frag  basic.vert
